-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
Qt Creator 3.2.0-beta1
-
Ubuntu 12.04 LTS 64 bit
-
e569ab8f2b66db2e23d03bba84e03d9425baf433
Accelerator shortcuts for Mercurial start with Alt+H. This triggers the Help menu, so Mercurial can't be used like this.
Please choose different accelerators to avoid collisions.
- replaces
-
QTCREATORBUG-10764 Mercurial's commit shortcut won't work
-
- Closed
-