Mercurial: Replace Alt+H with Alt+G for accelerators

Alt+H triggers the Help menu.

Task-number: QTCREATORBUG-12531
Change-Id: I357db8f01fa28209a818e8c9a9587f213e0d0ca5
Reviewed-by: Tobias Hunger <tobias.hunger@theqtcompany.com>